Login issue solved(admin)

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://my_app_db:myapp123456@cluster0.qxji6n4.mongodb.net/my_app_db?retryWrites=true&w=majority
 PORT=5000
+VITE_ADMIN_EMAIL=admin@myapp.com
+VITE_ADMIN_PASSWORD=admin123
